adding and removing traits is fully working now

--- a/SimTECH/SimTECH/Components/RangeInput.razor
+++ b/SimTECH/SimTECH/Components/RangeInput.razor
@@ -40,14 +40,14 @@
     public RenderFragment? ChildContent { get; set; }
 
     [Parameter]
-    public IList<EditDevRangeModel> Items { get; set; } = new List<EditDevRangeModel>();
+    public IList<EditRangeModel> Items { get; set; } = new List<EditRangeModel>();
 
     [Parameter]
     public RangeType RangeType { get; set; }
     
     private void AppendRangeRow()
     {
-        Items.Add(new EditDevRangeModel()
+        Items.Add(new EditRangeModel()
             {
                 Type = RangeType,
                 Comparer = 10,
