Can create (and copy) seasons now, not including the races of the season though

--- a/SimTECH/SimTECH/Pages/Racing/Seasons.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Seasons.razor
@@ -48,6 +48,7 @@
 
         if (!result.Canceled && result.Data != null && result.Data is Season updatedItem)
         {
+            await SeasonService.UpdateSeason(updatedItem);
             Nav.NavigateTo($"/overview/{updatedItem.Id}");
         }
     }
