--- a/SimTECH/SimTECH/Pages/Racing/SeasonEditor.razor
+++ b/SimTECH/SimTECH/Pages/Racing/SeasonEditor.razor
@@ -4,8 +4,8 @@
     </TitleContent>
     <DialogContent>
         <MudForm Model="@model">
-            <MudGrid>
-                <MudItem xs="8">
+            <MudGrid Spacing="2">
+                <MudItem xs="6">
                     <MudPaper>
                         <MudNumericField T="int" @bind-Value="model.Year" Label="Year" />
                         <MudNumericField T="int" @bind-Value="model.MaximumDriversInRace" Label="MaximumDriversInRace" />
@@ -18,12 +18,48 @@
                         <MudNumericField T="int" @bind-Value="model.PitMaximum" Label="Pit max. RNG" />
                         <MudNumericField T="int" @bind-Value="model.PointsPole" Label="Awarded pts. POLE" />
                         <MudNumericField T="int" @bind-Value="model.PointsFastestLap" Label="Awarded pts. FL" />
+                        <MudNumericField T="long" @bind-Value="model.LeagueId" Label="League ID" />
                     </MudPaper>
                 </MudItem>
-                <MudItem xs="4">
+                <MudItem xs="6">
                     <MudPaper>
                         <MudText>Points per position</MudText>
-
+                        <MudTable Items="@model.PointAllotments" Dense="true" ReadOnly="false"
+                                  RowEditPreview="BackupAllotment" RowEditCancel="ResetAllotment" ApplyButtonPosition="TableApplyButtonPosition.End"
+                                  EditButtonPosition="TableEditButtonPosition.End" EditTrigger="TableEditTrigger.RowClick">
+                            <HeaderContent>
+                                <MudTh>
+                                    <MudTableSortLabel SortBy="new Func<EditPointAllotmentModel, object>(e => e.Position)">Position</MudTableSortLabel>
+                                </MudTh>
+                                <MudTh>Points</MudTh>
+                                <MudTh></MudTh>
+                            </HeaderContent>
+                            <RowTemplate>
+                                <MudTd DataLabel="Position">@context.Position</MudTd>
+                                <MudTd DataLabel="Points">@context.Points</MudTd>
+                                <MudTd>
+                                    <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.RestoreFromTrash" Color="Color.Error" Class="pa-0" OnClick="@(() => RemoveAllotment(context))" />
+                                </MudTd>
+                            </RowTemplate>
+                            <RowEditingTemplate>
+                                <MudTd DataLabel="Position">
+                                    <MudNumericField @bind-Value="@context.Position" Required />
+                                </MudTd>
+                                <MudTd DataLabel="Points">
+                                    <MudNumericField @bind-Value="@context.Points" Required />
+                                </MudTd>
+                            </RowEditingTemplate>
+                            <FooterContent>
+                                <MudTFootRow>
+                                    <MudTd>
+                                        <MudIconButton Icon="@Icons.Material.Filled.Add" Color="Color.Tertiary" OnClick="AppendAllotment"></MudIconButton>
+                                    </MudTd>
+                                </MudTFootRow>
+                            </FooterContent>
+                            <EditButtonContent Context="button">
+                                <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" Class="pa-0" OnClick="@button.ButtonAction" Disabled="@button.ButtonDisabled" />
+                            </EditButtonContent>
+                        </MudTable>
                     </MudPaper>
                 </MudItem>
             </MudGrid>
@@ -46,12 +82,52 @@
     public bool? Copied { get; set; }
 
     private EditSeasonModel model = new();
+    private EditPointAllotmentModel allotmentBackup;
+
+    protected override void OnInitialized()
+    {
+        if (Season != null)
+        {
+            model = new EditSeasonModel(Season);
+
+            if (Copied.GetValueOrDefault())
+                model.ResetIdentifierFields();
+        }
+    }
+
+    private void BackupAllotment(object allotment) //alternatively use EditPointAllotmentModel if this doesnt work
+    {
+        allotmentBackup = new()
+            {
+                Id = ((EditPointAllotmentModel)allotment).Id,
+                Position = ((EditPointAllotmentModel)allotment).Position,
+                Points = ((EditPointAllotmentModel)allotment).Points
+            };
+    }
+
+    private void ResetAllotment(object allotment) //alternatively use EditPointAllotmentModel if this doesnt work
+    {
+        ((EditPointAllotmentModel)allotment).Id = allotmentBackup.Id;
+        ((EditPointAllotmentModel)allotment).Position = allotmentBackup.Position;
+        ((EditPointAllotmentModel)allotment).Points = allotmentBackup.Points;
+    }
+
+    private void AppendAllotment()
+    {
+        model.PointAllotments.Add(new EditPointAllotmentModel
+            {
+                Position = 0,
+                Points = 0
+            });
+    }
+
+    private void RemoveAllotment(EditPointAllotmentModel allotment)
+    {
+        model.PointAllotments.Remove(allotment);
+    }
 
     private void Submit()
     {
-        if (Copied.GetValueOrDefault())
-            model.ResetIdentifierFields();
-
         if (model.IsDirty)
         {
             var modSeason = model.Record;
