--- a/SimTECH/SimTECH/Pages/Racing/SeasonEditor.razor
+++ b/SimTECH/SimTECH/Pages/Racing/SeasonEditor.razor
@@ -38,7 +38,7 @@
                                 <MudTd DataLabel="Position">@context.Position</MudTd>
                                 <MudTd DataLabel="Points">@context.Points</MudTd>
                                 <MudTd>
-                                    <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.RestoreFromTrash" Color="Color.Error" Class="pa-0" OnClick="@(() => RemoveAllotment(context))" />
+                                    <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Delete" Color="Color.Error" Class="pa-0" OnClick="@(() => RemoveAllotment(context))" />
                                 </MudTd>
                             </RowTemplate>
                             <RowEditingTemplate>
