Progress made on the season overview/editor area

--- a/SimTECH/SimTECH/Pages/Leagues/LeagueEditor.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/LeagueEditor.razor
@@ -30,11 +30,9 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter]
-    protected MudDialogInstance? LeagueDialog { get; set; }
+    [CascadingParameter] protected MudDialogInstance? LeagueDialog { get; set; }
 
-    [Parameter]
-    public League? League { get; set; }
+    [Parameter] public League? League { get; set; }
 
     private EditLeagueModel model = new();
     private List<EditRangeModel> _skillRanges = new();
